fix top menu styles to align with dvc.org

--- a/src/components/feed/item/styles.module.css
+++ b/src/components/feed/item/styles.module.css
@@ -28,7 +28,7 @@
 
   @media (--lg-scr) {
     &.big {
-      width: 1000px;
+      width: 1005px;
       height: 450px;
     }
   }
