--- a/src/components/pseudo-button/styles.module.css
+++ b/src/components/pseudo-button/styles.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   border: 2px solid;
-  padding: 0 18px;
+  padding: 1px 19px 2px;
   text-decoration: none;
   font-weight: 700;
   transition: 0.2s background-color ease-out;
